removed quotes from yaml

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Ensley Church of Christ
-subtitle: "Let us love one another" 1 John 4:7
+subtitle: Let us love one another - 1 John 4:7
 ---
 
 
