--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@ subtitle: Let us love one another - 1 John 4:7
 ---
 
 
+<br>Welcome to the Ensley Church of Christ, where you will find worship in spirit and in truth, </br>
+<br>where word is preached without addition or subtraction, </br>
+<br>where you will find love without hypocrisy, </br>
+<br>where GOD is glorified, the name of Jesus is magnified, and Assembly is edified. </br> 
