--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@ title: Ensley Church of Christ
 subtitle: Let us love one another - 1 John 4:7
 ---
 
+<html>
+<head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
+<body>
 
-<br>Welcome to the Ensley Church of Christ, where you will find worship in spirit and in truth, </br>
-<br>where word is preached without addition or subtraction, </br>
-<br>where you will find love without hypocrisy, </br>
-<br>where GOD is glorified, the name of Jesus is magnified, and Assembly is edified. </br> 
+<h1>Welcome to the Ensley Church of Christ!</h1>
+<p><br>Here you will find worship in spirit and in truth, </br>
+    <br>that word is preached without addition or subtraction, </br>
+    <br>that you will find love without hypocrisy, </br>
+    <br>and that GOD is glorified, the name of Jesus is magnified, and Assembly is edified. </br> </p>
+</body>
+</html>
+
