--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ div {text-align: center;}
 </head>
 <body>
 
-<h1>Welcome to the Ensley Church of Christ!</h1>
+<h1><br>Welcome</br> to the Ensley Church of Christ!</h1>
 <p><br>Here you will find worship in spirit and in truth, </br>
     <br>that word is preached without addition or subtraction, </br>
     <br>that you will find love without hypocrisy, </br>
