update front page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ div {text-align: center;}
 </head>
 <body>
 
+<img src="assets/img/ECOC_transparent1.png" alt="ECOC logo">
 <h1><br>Welcome</br> to the Ensley Church of Christ!</h1>
 <p><br>Here you will find worship in spirit and in truth, </br>
     <br>that word is preached without addition or subtraction, </br>
